<?xml version="1.0"?>
<package format="3">
  <name>cut_pliers</name>
  <version>0.0.0</version>
  <description>ROS2 Package for controlling a cutting pliers mechanism.</description>
  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>serial</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>turtlesim</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>custom_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

